# wuwa-dango-2026

./: .gitignore  Cargo.toml  README.md  ReadMe_en.md  TODO.md  main-expand.rs
agent/: claude.md  refactor.md  团子技能.md  小组赛.md  总决赛.md  比赛规则.md  淘汰赛.md  谢幕赛.md  赛道信息.md
agent/plan/: 01-refactor-rc-refcell-dango.md
benches/: game_bench.rs
src/: dangos.rs  game.rs  lib.rs  main.rs  roll.rs  track.rs  utils.rs
src/dangos/: budawang.rs  cartethyia.rs  chisa.rs  denia.rs  hiyuki.rs  luukherssen.rs  lynae.rs  mornye.rs  phoebe.rs  sigrika.rs  tests.rs
