[package]
name = "wuwa-dango-2026"
version = "0.1.0"
edition = "2024"
default-run = "wuwa-dango-2026"

[dependencies]
ambassador = "0.5.1"
rand = "0.10.1"
rayon = "1.12.0"
unicode-width = "0.2.2"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["stable"] }

[[bench]]
name = "game_bench"
harness = false

[profile.profiling]
inherits = "release"
debug = true
